--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
+    "inquirer": "^12.4.2",
     "pg": "^8.11.3"
   },
   "keywords": [],
